--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -94,6 +94,9 @@
 		"longitude": "Longitude",
 		"latitude": "Latitude",
 		"visit": "Visit",
+		"timed": "Timed",
+		"coordinates": "Coordinates",
+		"copy_coordinates": "Copy Coordinates",
 		"visits": "Visits",
 		"create_new": "Create New...",
 		"adventure": "Adventure",
@@ -120,6 +123,9 @@
 		"upload_images_here": "Upload images here",
 		"share_adventure": "Share this Adventure!",
 		"copy_link": "Copy Link",
+		"sun_times": "Sun Times",
+		"sunrise": "Sunrise",
+		"sunset": "Sunset",
 		"image": "Image",
 		"upload_image": "Upload Image",
 		"open_in_maps": "Open in Maps",
@@ -370,12 +376,22 @@
 		"account_settings": "User Account Settings",
 		"update": "Update",
 		"no_verified_email_warning": "You must have a verified email address to enable two-factor authentication.",
+		"social_auth": "Social Authentication",
+		"social_auth_desc_1": "Manage social login options and password settings",
+		"password_auth": "Password Authentication",
+		"password_login_enabled": "Password login enabled",
+		"password_login_disabled": "Password login disabled",
 		"password_change": "Change Password",
 		"new_password": "New Password",
 		"confirm_new_password": "Confirm New Password",
 		"email_change": "Change Email",
 		"current_email": "Current Email",
 		"no_email_set": "No email set",
+		"email_management": "Email Management",
+		"email_management_desc": "Manage your email addresses and verification status",
+		"add_new_email": "Add New Email",
+		"add_new_email_address": "Add New Email Address",
+		"enter_new_email": "Enter new email address",
 		"new_email": "New Email",
 		"change_password": "Change Password",
 		"login_redir": "You will then be redirected to the login page.",
@@ -411,10 +427,14 @@
 		"no_emai_set": "No email set",
 		"error_change_password": "Error changing password. Please check your current password and try again.",
 		"mfa_disabled": "Multi-factor authentication disabled successfully!",
-		"mfa_page_title": "Multi-factor Authentication",
+		"mfa_page_title": "Multi-Factor Authentication",
+		"mfa_desc": "Add an extra layer of security to your account",
 		"enable_mfa": "Enable MFA",
 		"disable_mfa": "Disable MFA",
+		"enabled": "Enabled",
+		"disabled": "Disabled",
 		"mfa_not_enabled": "MFA is not enabled",
+		"mfa_is_enabled": "MFA is enabled",
 		"mfa_enabled": "Multi-factor authentication enabled successfully!",
 		"copy": "Copy",
 		"recovery_codes": "Recovery Codes",
@@ -436,6 +456,24 @@
 		"username_taken": "This username is already in use.",
 		"administration_settings": "Administration Settings",
 		"launch_administration_panel": "Launch Administration Panel",
+		"administration": "Administration",
+		"admin_panel_desc": "Access the full administration interface",
+		"region_updates": "Region Updates",
+		"debug_information": "Debug Information",
+		"staff_status": "Staff Status",
+		"staff_user": "Staff User",
+		"regular_user": "Regular User",
+		"app_version": "App Version",
+		"quick_actions": "Quick Actions",
+		"license": "License",
+		"all_rights_reserved": "All rights reserved.",
+		"region_updates_desc": "Update visited regions and cities",
+		"access_restricted": "Access Restricted",
+		"access_restricted_desc": "YAdministrative features are only available to staff members.",
+		"advanced_settings": "Advanced Settings",
+		"advanced_settings_desc": "Advanced configuration and development tools",
+		"social_auth_setup": "Social Authentication Setup",
+		"administration_desc": "Administrative tools and settings",
 		"social_oidc_auth": "Social and OIDC Authentication",
 		"social_auth_desc": "Enable or disable social and OIDC authentication providers for your account. These connections allow you to sign in with self hosted authentication identity providers like Authentik or 3rd party providers like GitHub.",
 		"social_auth_desc_2": "These settings are managed in the AdventureLog server and must be manually enabled by the administrator.",
@@ -450,7 +488,26 @@
 		"password_disabled": "Password authentication disabled",
 		"password_disable_warning": "Currently, password authentication is disabled. Login via a social or OIDC provider is required.",
 		"password_disabled_error": "Error disabling password authentication. Make sure a social or OIDC provider is linked to your account.",
-		"password_enabled_error": "Error enabling password authentication."
+		"password_enabled_error": "Error enabling password authentication.",
+		"settings_menu": "Settings Menu",
+		"security": "Security",
+		"emails": "Emails",
+		"integrations": "Integrations",
+		"integrations_desc": "Connect external services to enhance your experience",
+		"admin": "Admin",
+		"advanced": "Advanced",
+		"profile_info": "Profile Information",
+		"profile_info_desc": "Update your personal details and profile picture",
+		"public_profile_desc": "Make your profile visible to other users",
+		"pass_change_desc": "Update your account password for better security",
+		"enter_first_name": "Enter your first name",
+		"enter_last_name": "Enter your last name",
+		"enter_username": "Enter your username",
+		"enter_current_password": "Enter current password",
+		"enter_new_password": "Enter new password",
+		"connected": "Connected",
+		"disconnected": "Disconnected",
+		"confirm_new_password_desc": "Confirm new password"
 	},
 	"collection": {
 		"collection_created": "Collection created successfully!",
@@ -629,10 +686,14 @@
 		"api_note": "Note: this must be the URL to the Immich API server so it likely ends with /api unless you have a custom config.",
 		"api_key": "Immich API Key",
 		"enable_immich": "Enable Immich",
+		"enable_integration": "Enable Integration",
 		"update_integration": "Update Integration",
 		"immich_integration": "Immich Integration",
+		"immich_integration_desc": "Connect your Immich photo management server",
 		"localhost_note": "Note: localhost will most likely not work unless you have setup docker networks accordingly. It is recommended to use the IP address of the server or the domain name.",
-		"documentation": "Immich Integration Documentation"
+		"documentation": "Immich Integration Documentation",
+		"api_key_placeholder": "Enter your Immich API key",
+		"need_help": "Need help setting this up? Check out the"
 	},
 	"recomendations": {
 		"address": "Address",
