--- a/frontend/src/locales/no.json
+++ b/frontend/src/locales/no.json
@@ -309,7 +309,13 @@
     "arrival_timezone": "Ankomst tidssone",
     "departure_timezone": "Avgangstidssone",
     "arrival_date": "Ankomstdato",
-    "departure_date": "Avgangsdato"
+    "departure_date": "Avgangsdato",
+    "coordinates": "Koordinater",
+    "copy_coordinates": "Kopier koordinater",
+    "sun_times": "Soltider",
+    "sunrise": "Soloppgang",
+    "sunset": "Solnedgang",
+    "timed": "Tidsbestemt"
   },
   "worldtravel": {
     "country_list": "Liste over land",
@@ -450,7 +456,58 @@
     "password_disabled": "Passordautentisering er deaktivert",
     "password_disable_warning": "Akkurat nå er passordautentisering deaktivert. Innlogging via en sosial eller OIDC-leverandør er påkrevd.",
     "password_disabled_error": "Feil ved deaktivering av passordautentisering. Sørg for at en sosial eller OIDC-leverandør er koblet til kontoen din.",
-    "password_enabled_error": "Feil ved aktivering av passordautentisering."
+    "password_enabled_error": "Feil ved aktivering av passordautentisering.",
+    "access_restricted": "Tilgang begrenset",
+    "access_restricted_desc": "Yadministative funksjoner er bare tilgjengelige for ansatte.",
+    "add_new_email": "Legg til ny e -post",
+    "add_new_email_address": "Legg til ny e -postadresse",
+    "admin": "Admin",
+    "admin_panel_desc": "Få tilgang til hele administrasjonsgrensesnittet",
+    "administration": "Administrasjon",
+    "administration_desc": "Administrative verktøy og innstillinger",
+    "advanced": "Avansert",
+    "advanced_settings": "Avanserte innstillinger",
+    "advanced_settings_desc": "Avanserte konfigurasjons- og utviklingsverktøy",
+    "all_rights_reserved": "Alle rettigheter forbeholdt.",
+    "app_version": "Appversjon",
+    "confirm_new_password_desc": "Bekreft nytt passord",
+    "connected": "Tilkoblet",
+    "debug_information": "Feilsøkingsinformasjon",
+    "disabled": "Funksjonshemmet",
+    "disconnected": "Koblet fra",
+    "email_management": "E -postadministrasjon",
+    "email_management_desc": "Administrer e -postadressene og bekreftelsesstatusen",
+    "emails": "E -post",
+    "enabled": "Aktivert",
+    "enter_current_password": "Skriv inn gjeldende passord",
+    "enter_first_name": "Skriv inn fornavnet ditt",
+    "enter_last_name": "Skriv inn etternavnet ditt",
+    "enter_new_email": "Skriv inn ny e -postadresse",
+    "enter_new_password": "Skriv inn nytt passord",
+    "enter_username": "Skriv inn brukernavnet ditt",
+    "integrations": "Integrasjoner",
+    "integrations_desc": "Koble eksterne tjenester for å forbedre opplevelsen din",
+    "license": "Tillatelse",
+    "mfa_desc": "Legg til et ekstra lag med sikkerhet til kontoen din",
+    "mfa_is_enabled": "MFA er aktivert",
+    "pass_change_desc": "Oppdater kontopassordet ditt for bedre sikkerhet",
+    "password_auth": "Passordautentisering",
+    "password_login_disabled": "Passordinnloggingsaktivert",
+    "password_login_enabled": "Passordinnlogging er aktivert",
+    "profile_info": "Profilinformasjon",
+    "profile_info_desc": "Oppdater dine personlige detaljer og profilbilde",
+    "public_profile_desc": "Gjør profilen din synlig for andre brukere",
+    "quick_actions": "Raske handlinger",
+    "region_updates": "Regionoppdateringer",
+    "region_updates_desc": "Oppdatering besøkte regioner og byer",
+    "regular_user": "Vanlig bruker",
+    "security": "Sikkerhet",
+    "settings_menu": "Innstillingsmenyen",
+    "social_auth": "Sosial godkjenning",
+    "social_auth_desc_1": "Administrer sosiale påloggingsalternativer og passordinnstillinger",
+    "social_auth_setup": "Sosial autentiseringsoppsett",
+    "staff_status": "Personalstatus",
+    "staff_user": "Personalbruker"
   },
   "collection": {
     "collection_created": "Samling opprettet!",
@@ -632,7 +689,11 @@
     "update_integration": "Oppdater integrasjon",
     "immich_integration": "Immich-integrasjon",
     "localhost_note": "Merk: localhost vil sannsynligvis ikke fungere med mindre du har satt opp docker-nettverk. Det anbefales å bruke serverens IP-adresse eller domenenavn.",
-    "documentation": "Immich-integrasjonsdokumentasjon"
+    "documentation": "Immich-integrasjonsdokumentasjon",
+    "api_key_placeholder": "Skriv inn Immich API -tasten",
+    "enable_integration": "Aktiver integrasjon",
+    "immich_integration_desc": "Koble til Immich Photo Management Server",
+    "need_help": "Trenger du hjelp til å sette opp dette? \nSjekk ut"
   },
   "recomendations": {
     "address": "Adresse",
