--- a/frontend/src/locales/pl.json
+++ b/frontend/src/locales/pl.json
@@ -309,7 +309,13 @@
     "arrival_timezone": "Strefa czasowa przyjazdu",
     "departure_timezone": "Strefa czasowa odlotu",
     "arrival_date": "Data przyjazdu",
-    "departure_date": "Data wyjazdu"
+    "departure_date": "Data wyjazdu",
+    "coordinates": "Współrzędne",
+    "copy_coordinates": "Kopiuj współrzędne",
+    "sun_times": "Czasy słońca",
+    "sunrise": "Wschód słońca",
+    "sunset": "Zachód słońca",
+    "timed": "Czas"
   },
   "worldtravel": {
     "country_list": "Lista krajów",
@@ -450,7 +456,58 @@
     "password_disabled": "Uwierzytelnianie hasła wyłączone",
     "password_disabled_error": "Błąd wyłączający uwierzytelnianie hasła. \nUpewnij się, że dostawca społecznościowy lub OIDC jest powiązany z Twoim kontem.",
     "password_enabled": "Włączone uwierzytelnianie hasła",
-    "password_enabled_error": "Błąd umożliwiający uwierzytelnianie hasła."
+    "password_enabled_error": "Błąd umożliwiający uwierzytelnianie hasła.",
+    "access_restricted": "Dostęp do ograniczenia",
+    "access_restricted_desc": "Funkcje jadminarne są dostępne tylko dla pracowników.",
+    "add_new_email": "Dodaj nowy e -mail",
+    "add_new_email_address": "Dodaj nowy adres e -mail",
+    "admin": "Admin",
+    "admin_panel_desc": "Uzyskaj dostęp do pełnego interfejsu administracyjnego",
+    "administration": "Administracja",
+    "administration_desc": "Narzędzia administracyjne i ustawienia",
+    "advanced": "Zaawansowany",
+    "advanced_settings": "Zaawansowane ustawienia",
+    "advanced_settings_desc": "Zaawansowane narzędzia konfiguracyjne i programistyczne",
+    "all_rights_reserved": "Wszelkie prawa zastrzeżone.",
+    "app_version": "Wersja aplikacji",
+    "confirm_new_password_desc": "Potwierdź nowe hasło",
+    "connected": "Połączony",
+    "debug_information": "Informacje o debugowaniu",
+    "disabled": "Wyłączony",
+    "disconnected": "Bezładny",
+    "email_management": "Zarządzanie e -mail",
+    "email_management_desc": "Zarządzaj adresami e -mail i statusem weryfikacji",
+    "emails": "E -maile",
+    "enabled": "Włączony",
+    "enter_current_password": "Wprowadź bieżące hasło",
+    "enter_first_name": "Wprowadź swoje imię",
+    "enter_last_name": "Wprowadź swoje nazwisko",
+    "enter_new_email": "Wprowadź nowy adres e -mail",
+    "enter_new_password": "Wprowadź nowe hasło",
+    "enter_username": "Wprowadź swoją nazwę użytkownika",
+    "integrations": "Integracje",
+    "integrations_desc": "Połącz usługi zewnętrzne, aby ulepszyć swoje wrażenia",
+    "license": "Licencja",
+    "mfa_desc": "Dodaj dodatkową warstwę bezpieczeństwa na swoje konto",
+    "mfa_is_enabled": "MFA jest włączona",
+    "pass_change_desc": "Zaktualizuj hasło konta, aby uzyskać lepsze bezpieczeństwo",
+    "password_auth": "Uwierzytelnianie hasła",
+    "password_login_disabled": "Wyłączanie logowania hasła",
+    "password_login_enabled": "Włączone logowanie hasła",
+    "profile_info": "Informacje o profilu",
+    "profile_info_desc": "Zaktualizuj swoje dane osobowe i zdjęcie profilowe",
+    "public_profile_desc": "Spraw, aby Twój profil był widoczny dla innych użytkowników",
+    "quick_actions": "Szybkie działania",
+    "region_updates": "Aktualizacje regionu",
+    "region_updates_desc": "Aktualizacja odwiedzonych regionów i miast",
+    "regular_user": "Zwykły użytkownik",
+    "security": "Bezpieczeństwo",
+    "settings_menu": "Menu Ustawienia",
+    "social_auth": "Uwierzytelnianie społeczne",
+    "social_auth_desc_1": "Zarządzaj opcjami logowania społecznościowego i ustawieniami haseł",
+    "social_auth_setup": "Konfiguracja uwierzytelniania społecznego",
+    "staff_status": "Status personelu",
+    "staff_user": "Użytkownik personelu"
   },
   "collection": {
     "collection_created": "Kolekcja została pomyślnie utworzona!",
@@ -602,7 +659,11 @@
     "immich_desc": "Zintegruj swoje konto Immich z AdventureLog, aby móc przeszukiwać bibliotekę zdjęć i importować zdjęcia do swoich przygód.",
     "immich_disabled": "Integracja z Immich została pomyślnie wyłączona!",
     "documentation": "Dokumentacja integracji Immicha",
-    "localhost_note": "Uwaga: localhost najprawdopodobniej nie będzie działać, jeśli nie skonfigurujesz odpowiednio sieci dokerów. \nZalecane jest użycie adresu IP serwera lub nazwy domeny."
+    "localhost_note": "Uwaga: localhost najprawdopodobniej nie będzie działać, jeśli nie skonfigurujesz odpowiednio sieci dokerów. \nZalecane jest użycie adresu IP serwera lub nazwy domeny.",
+    "api_key_placeholder": "Wprowadź swój klucz API IMMICH",
+    "enable_integration": "Włącz integrację",
+    "immich_integration_desc": "Połącz swój serwer zarządzania zdjęciami Immich",
+    "need_help": "Potrzebujesz pomocy w konfiguracji? \nSprawdź"
   },
   "recomendations": {
     "address": "Adres",
