--- a/frontend/src/locales/sv.json
+++ b/frontend/src/locales/sv.json
@@ -261,7 +261,13 @@
     "arrival_timezone": "Ankomsttidszon",
     "departure_timezone": "Avgångstidszon",
     "arrival_date": "Ankomstdatum",
-    "departure_date": "Avgångsdatum"
+    "departure_date": "Avgångsdatum",
+    "coordinates": "Koordinater",
+    "copy_coordinates": "Kopieringskoordinater",
+    "sun_times": "Soltider",
+    "sunrise": "Soluppgång",
+    "sunset": "Solnedgång",
+    "timed": "Tidsinställd"
   },
   "home": {
     "desc_1": "Upptäck, planera och utforska med lätthet",
@@ -450,7 +456,58 @@
     "password_disabled": "Lösenordsautentisering inaktiverad",
     "password_disabled_error": "Fel Inaktivera lösenordsautentisering. \nSe till att en social eller OIDC -leverantör är länkad till ditt konto.",
     "password_enabled": "Lösenordsautentisering aktiverad",
-    "password_enabled_error": "Fel som aktiverar lösenordsautentisering."
+    "password_enabled_error": "Fel som aktiverar lösenordsautentisering.",
+    "access_restricted": "Tillgång begränsad",
+    "access_restricted_desc": "Yadministrativa funktioner är endast tillgängliga för personal.",
+    "add_new_email": "Lägg till nytt e -postmeddelande",
+    "add_new_email_address": "Lägg till ny e -postadress",
+    "admin": "Administration",
+    "admin_panel_desc": "Åtkomst till hela administrationsgränssnittet",
+    "administration": "Administration",
+    "administration_desc": "Administrativa verktyg och inställningar",
+    "advanced": "Avancerad",
+    "advanced_settings": "Avancerade inställningar",
+    "advanced_settings_desc": "Avancerade konfigurations- och utvecklingsverktyg",
+    "all_rights_reserved": "Alla rättigheter reserverade.",
+    "app_version": "Appversion",
+    "confirm_new_password_desc": "Bekräfta nytt lösenord",
+    "connected": "Ansluten",
+    "debug_information": "Felsökningsinformation",
+    "disabled": "Funktionshindrad",
+    "disconnected": "Osammanhängande",
+    "email_management": "E -posthantering",
+    "email_management_desc": "Hantera dina e -postadresser och verifieringsstatus",
+    "emails": "E -postmeddelanden",
+    "enabled": "Aktiverad",
+    "enter_current_password": "Ange aktuellt lösenord",
+    "enter_first_name": "Ange ditt förnamn",
+    "enter_last_name": "Ange ditt efternamn",
+    "enter_new_email": "Ange en ny e -postadress",
+    "enter_new_password": "Ange ett nytt lösenord",
+    "enter_username": "Ange ditt användarnamn",
+    "integrations": "Integrationer",
+    "integrations_desc": "Anslut externa tjänster för att förbättra din upplevelse",
+    "license": "Licens",
+    "mfa_desc": "Lägg till ett extra lager av säkerhet till ditt konto",
+    "mfa_is_enabled": "MFA är aktiverad",
+    "pass_change_desc": "Uppdatera ditt kontolösenord för bättre säkerhet",
+    "password_auth": "Lösenordsautentisering",
+    "password_login_disabled": "Lösenordsinloggning inaktiverad",
+    "password_login_enabled": "Lösenordsinloggning aktiverad",
+    "profile_info": "Profilinformation",
+    "profile_info_desc": "Uppdatera dina personliga uppgifter och profilbild",
+    "public_profile_desc": "Gör din profil synlig för andra användare",
+    "quick_actions": "Snabbåtgärder",
+    "region_updates": "Regionuppdateringar",
+    "region_updates_desc": "Uppdatera besökta regioner och städer",
+    "regular_user": "Vanlig användare",
+    "security": "Säkerhet",
+    "settings_menu": "Inställningsmeny",
+    "social_auth": "Social autentisering",
+    "social_auth_desc_1": "Hantera sociala inloggningsalternativ och lösenordsinställningar",
+    "social_auth_setup": "Social autentiseringsinställning",
+    "staff_status": "Personalstatus",
+    "staff_user": "Personalanvändare"
   },
   "checklist": {
     "add_item": "Lägg till objekt",
@@ -602,7 +659,11 @@
     "server_url": "Immich Server URL",
     "update_integration": "Uppdatera integration",
     "documentation": "Immich Integrationsdokumentation",
-    "localhost_note": "Obs: localhost kommer sannolikt inte att fungera om du inte har konfigurerat docker-nätverk i enlighet med detta. \nDet rekommenderas att använda serverns IP-adress eller domännamnet."
+    "localhost_note": "Obs: localhost kommer sannolikt inte att fungera om du inte har konfigurerat docker-nätverk i enlighet med detta. \nDet rekommenderas att använda serverns IP-adress eller domännamnet.",
+    "api_key_placeholder": "Ange din immich API -nyckel",
+    "enable_integration": "Aktivera integration",
+    "immich_integration_desc": "Anslut din immich fotohanteringsserver",
+    "need_help": "Behöver du hjälp med att ställa in detta? \nKolla in"
   },
   "recomendations": {
     "address": "Adress",
