--- a/frontend/src/locales/ko.json
+++ b/frontend/src/locales/ko.json
@@ -261,7 +261,13 @@
     "arrival_timezone": "도착 시간대",
     "departure_timezone": "출발 시간대",
     "arrival_date": "도착 날짜",
-    "departure_date": "출발 날짜"
+    "departure_date": "출발 날짜",
+    "coordinates": "좌표",
+    "copy_coordinates": "좌표를 복사하십시오",
+    "sun_times": "태양 시간",
+    "sunrise": "해돋이",
+    "sunset": "일몰",
+    "timed": "시간이 정해졌습니다"
   },
   "auth": {
     "both_passwords_required": "두 암호 모두 필요합니다",
@@ -371,7 +377,11 @@
     "query_required": "쿼리가 필요합니다",
     "server_down": "현재 Immich 서버가 다운되었거나 도달할 수 없습니다",
     "server_url": "Immich 서버 URL",
-    "update_integration": "통합 업데이트"
+    "update_integration": "통합 업데이트",
+    "api_key_placeholder": "Immich API 키를 입력하십시오",
+    "enable_integration": "통합을 활성화합니다",
+    "immich_integration_desc": "Immich Photo Management Server를 연결하십시오",
+    "need_help": "이것을 설정하는 데 도움이 필요하십니까? \n확인하십시오"
   },
   "map": {
     "add_adventure": "새로운 모험 추가",
@@ -536,7 +546,58 @@
     "password_disabled": "비밀번호 인증 비활성화",
     "password_disabled_error": "비밀번호 인증 오류. \n소셜 또는 OIDC 제공 업체가 귀하의 계정에 연결되어 있는지 확인하십시오.",
     "password_enabled": "비밀번호 인증 활성화",
-    "password_enabled_error": "비밀번호 인증을 활성화하는 오류."
+    "password_enabled_error": "비밀번호 인증을 활성화하는 오류.",
+    "access_restricted": "액세스 제한",
+    "access_restricted_desc": "Yadministrative 기능은 직원에게만 사용할 수 있습니다.",
+    "add_new_email": "새 이메일을 추가하십시오",
+    "add_new_email_address": "새 이메일 주소를 추가하십시오",
+    "admin": "관리자",
+    "admin_panel_desc": "전체 관리 인터페이스에 액세스하십시오",
+    "administration": "관리",
+    "administration_desc": "관리 도구 및 설정",
+    "advanced": "고급의",
+    "advanced_settings": "고급 설정",
+    "advanced_settings_desc": "고급 구성 및 개발 도구",
+    "all_rights_reserved": "모든 권리 보유.",
+    "app_version": "앱 버전",
+    "confirm_new_password_desc": "새 비밀번호를 확인하십시오",
+    "connected": "연결",
+    "debug_information": "디버그 정보",
+    "disabled": "장애가 있는",
+    "disconnected": "연결이 끊어졌습니다",
+    "email_management": "이메일 관리",
+    "email_management_desc": "이메일 주소 및 확인 상태를 관리하십시오",
+    "emails": "이메일",
+    "enabled": "활성화",
+    "enter_current_password": "현재 비밀번호를 입력하십시오",
+    "enter_first_name": "이름을 입력하십시오",
+    "enter_last_name": "성을 입력하십시오",
+    "enter_new_email": "새 이메일 주소를 입력하십시오",
+    "enter_new_password": "새 비밀번호를 입력하십시오",
+    "enter_username": "사용자 이름을 입력하십시오",
+    "integrations": "통합",
+    "integrations_desc": "경험을 향상시키기 위해 외부 서비스를 연결하십시오",
+    "license": "특허",
+    "mfa_desc": "계정에 추가 보안 계층을 추가하십시오",
+    "mfa_is_enabled": "MFA가 활성화되었습니다",
+    "pass_change_desc": "더 나은 보안을 위해 계정 비밀번호를 업데이트하십시오",
+    "password_auth": "비밀번호 인증",
+    "password_login_disabled": "암호 로그인이 비활성화되었습니다",
+    "password_login_enabled": "암호 로그인이 활성화되었습니다",
+    "profile_info": "프로필 정보",
+    "profile_info_desc": "개인 정보 및 프로필 사진을 업데이트하십시오",
+    "public_profile_desc": "프로필을 다른 사용자에게 보이게하십시오",
+    "quick_actions": "빠른 행동",
+    "region_updates": "지역 업데이트",
+    "region_updates_desc": "업데이트 방문 지역 및 도시",
+    "regular_user": "일반 사용자",
+    "security": "보안",
+    "settings_menu": "설정 메뉴",
+    "social_auth": "사회적 인증",
+    "social_auth_desc_1": "소셜 로그인 옵션 및 비밀번호 설정을 관리합니다",
+    "social_auth_setup": "소셜 인증 설정",
+    "staff_status": "직원 상태",
+    "staff_user": "직원 사용자"
   },
   "share": {
     "go_to_settings": "설정으로 이동",
