--- a/frontend/src/locales/nl.json
+++ b/frontend/src/locales/nl.json
@@ -261,7 +261,13 @@
     "arrival_timezone": "Aankomsttijdzone",
     "departure_timezone": "Vertrektijdzone",
     "arrival_date": "Aankomstdatum",
-    "departure_date": "Vertrekdatum"
+    "departure_date": "Vertrekdatum",
+    "coordinates": "Coördineert",
+    "copy_coordinates": "Kopieer coördinaten",
+    "sun_times": "Zonnetijden",
+    "sunrise": "Zonsopgang",
+    "sunset": "Zonsondergang",
+    "timed": "Getimed"
   },
   "home": {
     "desc_1": "Ontdek, plan en verken met gemak",
@@ -450,7 +456,58 @@
     "password_disabled": "Wachtwoordverificatie uitgeschakeld",
     "password_disabled_error": "Fout het uitschakelen van wachtwoordverificatie. \nZorg ervoor dat een sociale of OIDC -provider is gekoppeld aan uw account.",
     "password_enabled": "Wachtwoordverificatie ingeschakeld",
-    "password_enabled_error": "Fout bij het inschakelen van wachtwoordverificatie."
+    "password_enabled_error": "Fout bij het inschakelen van wachtwoordverificatie.",
+    "access_restricted": "Toegang beperkt",
+    "access_restricted_desc": "Yadministratieve functies zijn alleen beschikbaar voor personeelsleden.",
+    "add_new_email": "Voeg nieuwe e -mail toe",
+    "add_new_email_address": "Voeg nieuw e -mailadres toe",
+    "admin": "Beheersing",
+    "admin_panel_desc": "Toegang tot de volledige beheerinterface",
+    "administration": "Administratie",
+    "administration_desc": "Administratieve tools en instellingen",
+    "advanced": "Geavanceerd",
+    "advanced_settings": "Geavanceerde instellingen",
+    "advanced_settings_desc": "Geavanceerde configuratie- en ontwikkelingstools",
+    "all_rights_reserved": "Alle rechten voorbehouden.",
+    "app_version": "App -versie",
+    "confirm_new_password_desc": "Bevestig nieuw wachtwoord",
+    "debug_information": "Debug -informatie",
+    "disabled": "Gehandicapt",
+    "disconnected": "Losgekoppeld",
+    "email_management": "E -mailbeheer",
+    "email_management_desc": "Beheer uw e -mailadressen en verificatiestatus",
+    "emails": "E -mails",
+    "enabled": "Ingeschakeld",
+    "enter_current_password": "Voer het huidige wachtwoord in",
+    "enter_first_name": "Voer uw voornaam in",
+    "enter_last_name": "Voer uw achternaam in",
+    "enter_new_email": "Voer een nieuw e -mailadres in",
+    "enter_new_password": "Voer een nieuw wachtwoord in",
+    "enter_username": "Voer uw gebruikersnaam in",
+    "integrations": "Integratie",
+    "integrations_desc": "Verbind externe services om uw ervaring te verbeteren",
+    "license": "Licentie",
+    "mfa_desc": "Voeg een extra beveiligingslaag toe aan uw account",
+    "mfa_is_enabled": "MFA is ingeschakeld",
+    "pass_change_desc": "Werk uw accountwachtwoord bij voor een betere beveiliging",
+    "password_auth": "Wachtwoordverificatie",
+    "password_login_disabled": "Wachtwoord Aanmelding Uitgeschakeld",
+    "password_login_enabled": "Wachtwoordaanmelding ingeschakeld",
+    "profile_info": "Profielinformatie",
+    "profile_info_desc": "Werk uw persoonlijke gegevens en profielfoto bij",
+    "public_profile_desc": "Maak uw profiel zichtbaar voor andere gebruikers",
+    "quick_actions": "Snelle acties",
+    "region_updates": "Regio -updates",
+    "region_updates_desc": "Update bezochte regio's en steden",
+    "regular_user": "Gewone gebruiker",
+    "security": "Beveiliging",
+    "settings_menu": "Instellingenmenu",
+    "social_auth": "Sociale authenticatie",
+    "social_auth_desc_1": "Beheer sociale inlogopties en wachtwoordinstellingen",
+    "social_auth_setup": "Sociale authenticatie -opstelling",
+    "staff_status": "Status",
+    "staff_user": "Personeelsgebruiker",
+    "connected": "Aangesloten"
   },
   "checklist": {
     "add_item": "Artikel toevoegen",
@@ -602,7 +659,11 @@
     "server_url": "Immich-server-URL",
     "update_integration": "Integratie bijwerken",
     "documentation": "Immich-integratiedocumentatie",
-    "localhost_note": "Opmerking: localhost zal hoogstwaarschijnlijk niet werken tenzij dit bewust zo geconfigureerd is in het docker-netwerk. \nHet is aanbevolen om het IP-adres van de server of de domeinnaam te gebruiken."
+    "localhost_note": "Opmerking: localhost zal hoogstwaarschijnlijk niet werken tenzij dit bewust zo geconfigureerd is in het docker-netwerk. \nHet is aanbevolen om het IP-adres van de server of de domeinnaam te gebruiken.",
+    "api_key_placeholder": "Voer uw Immich API -sleutel in",
+    "enable_integration": "Integratie inschakelen",
+    "immich_integration_desc": "Verbind uw Immich Photo Management Server",
+    "need_help": "Hulp nodig bij het opzetten van dit? \nBekijk de"
   },
   "recomendations": {
     "address": "Adres",
