Refactor recommendations feature: add RecommendationsViewSet, update routing, and remove OverpassViewSet

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -120,6 +120,7 @@
 		"add_an_activity": "Add an activity",
 		"show_region_labels": "Show Region Labels",
 		"no_images": "No Images",
+		"distance": "Distance",
 		"upload_images_here": "Upload images here",
 		"share_adventure": "Share this Adventure!",
 		"copy_link": "Copy Link",
